# CreditIQ

./: .gitignore  MATH.md  README.md  SCHEMA.md  TOOLS.md  api.md  bootstrap.md  fix_readme_links.py  format_lower.py  frntend.md  frontend.md  get_trainer.py  howisthedatamade.md  insert_readme.py  math.md  patch_personas.py  patch_translator.py  pitch.md  pyproject.toml  readme.md  schema.md  signals.md  test.md  test_auth.py  test_gemma_json_format.py  test_gemma_no_sys.py  test_imran_cycle.py  tools.md
config/: redis.conf  settings.py
data/: demo_gstins.json  frontend_db.json
data/graphs/: edges_20260404.parquet
ewaybillformats/: EWB_Attributes_new - EWB Attributes.csv  EWB_Attributes_new - Master Codes.csv  EWB_Attributes_new - Sample JSON.csv  EWB_Attributes_new - Schema.csv  EWB_Attributes_new - Validations.csv  ewaybillschemafromjson.md
frontend/: .gitignore  index.html  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  styles.css  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppShell.tsx  Providers.tsx  shared.tsx
markdownstochat/: archi.md  bootstrap.md  howdoesthismsmeevenworkman.md  mmmmapimusic.md
scripts/: inject_fraud_features.py  inject_graphs.py  inject_real_gstins.py  phase1_generate.sh  phase2_redis_ingest.sh  phase3_features.sh  phase4_train.sh  phase5_tests.sh  phase6_api.sh  phase7_frontend.sh  run_offline.sh  run_online.sh  test_approve.py
scriptsoutput/: out.txt
tests/: test.py  test_api.py  test_features.py  test_fraud.py  test_gemma.py  test_scc.py  test_scoring.py
(+70 files in other folders)
